# scrapy_weekly_allocine

./: .gitignore  README.md  pyproject.toml
weeklyscraper/: scrapy.cfg
weeklyscraper/weeklyscraper/: items.py  middlewares.py  pipelines.py  settings.py
weeklyscraper/weeklyscraper/spiders/: weeklyspider.py
